// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`ArticleContainer Jest Component no data should render correctly 1`] = `null`;

exports[`ArticleContainer Jest Component should render Persian article correctly 1`] = `
<React.Fragment>
  <GlobalStyleComponent />
  <ServiceContextProvider
    service="persian"
  >
    <PlatformContextProvider
      platform="canonical"
    >
      <HeaderContainer />
      <MetadataContainer
        metadata={
          Object {
            "created": 1514808060000,
            "createdBy": "",
            "firstPublished": 1514808060000,
            "id": "urn:bbc:ares::article:cwv2xv848j5o",
            "lastPublished": 1514811600000,
            "lastUpdated": 1514811600000,
            "locators": Object {
              "optimoUrn": "urn:bbc:optimo:asset:cwv2xv848j5o",
            },
            "passport": Object {
              "category": "news",
              "genre": null,
              "home": "http://www.bbc.co.uk/ontologies/passport/home/Persian",
              "language": "fa",
            },
            "tags": Object {
              "about": null,
              "mentions": null,
            },
            "type": "article",
          }
        }
        promo={
          Object {
            "headlines": Object {
              "promoHeadline": "سرصفحه مقاله برای ارتقاء",
              "seoHeadline": "سرصفحه مقاله",
            },
            "id": "urn:bbc:ares::article:cwv2xv848j5o",
            "locators": Object {
              "optimoUrn": "urn:bbc:optimo:asset:cwv2xv848j5o",
            },
            "summary": "خلاصه مقاله",
            "timestamp": 1514811600000,
          }
        }
        service="persian"
      />
      <main
        role="main"
      >
        <ForwardRef>
          <ForwardRef>
            <Blocks
              blocks={
                Array [
                  Object {
                    "model": Object {
                      "blocks": Array [
                        Object {
                          "model": Object {
                            "blocks": Array [
                              Object {
                                "model": Object {
                                  "blocks": Array [
                                    Object {
                                      "model": Object {
                                        "attributes": Array [],
                                        "text": "سرصفحه مقاله",
                                      },
                                      "type": "fragment",
                                    },
                                  ],
                                  "text": "سرصفحه مقاله",
                                },
                                "type": "paragraph",
                              },
                            ],
                          },
                          "type": "text",
                        },
                      ],
                    },
                    "type": "headline",
                  },
                ]
              }
              componentsToRender={
                Object {
                  "headline": [Function],
                }
              }
            />
            <TimestampContainer
              timestamp={1514811600000}
            />
          </ForwardRef>
        </ForwardRef>
        <ForwardRef>
          <ForwardRef>
            <Blocks
              blocks={
                Array [
                  Object {
                    "model": Object {
                      "blocks": Array [
                        Object {
                          "model": Object {
                            "blocks": Array [
                              Object {
                                "model": Object {
                                  "attributes": Array [],
                                  "text": "یک پاراگراف.",
                                },
                                "type": "fragment",
                              },
                            ],
                            "text": "یک پاراگراف.",
                          },
                          "type": "paragraph",
                        },
                      ],
                    },
                    "type": "text",
                  },
                ]
              }
              componentsToRender={
                Object {
                  "image": [Function],
                  "subheadline": [Function],
                  "text": [Function],
                }
              }
            />
          </ForwardRef>
        </ForwardRef>
      </main>
      <FooterContainer />
    </PlatformContextProvider>
  </ServiceContextProvider>
</React.Fragment>
`;

exports[`ArticleContainer Jest Component should render news correctly 1`] = `
<React.Fragment>
  <GlobalStyleComponent />
  <ServiceContextProvider
    service="news"
  >
    <PlatformContextProvider
      platform="canonical"
    >
      <HeaderContainer />
      <MetadataContainer
        metadata={
          Object {
            "created": 1514808060000,
            "createdBy": "",
            "firstPublished": 1514808060000,
            "id": "urn:bbc:ares::article:c0000000001o",
            "lastPublished": 1514811600000,
            "lastUpdated": 1514811600000,
            "locators": Object {
              "optimoUrn": "urn:bbc:optimo:asset:c0000000001o",
            },
            "passport": Object {
              "category": "news",
              "genre": null,
              "home": "http://www.bbc.co.uk/ontologies/passport/home/News",
              "language": "en-gb",
            },
            "tags": Object {
              "about": Array [
                Object {
                  "curationType": Array [
                    "vivo-stream",
                  ],
                  "thingId": "2351f2b2-ce36-4f44-996d-c3c4f7f90eaa",
                  "thingLabel": "Royal Wedding 2018",
                  "thingType": Array [
                    "Thing",
                    "Event",
                  ],
                  "thingUri": "http://www.bbc.co.uk/things/2351f2b2-ce36-4f44-996d-c3c4f7f90eaa#id",
                  "topicId": "cpwpy79d6dxt",
                  "topicName": "Royal Wedding 2018",
                },
              ],
              "mentions": Array [
                Object {
                  "thingId": "1efbf3e5-b330-49a1-b531-b507ab027c96",
                  "thingLabel": "Queen Victoria",
                  "thingType": Array [
                    "Person",
                    "Thing",
                  ],
                  "thingUri": "http://www.bbc.co.uk/things/1efbf3e5-b330-49a1-b531-b507ab027c96#id",
                },
              ],
            },
            "type": "article",
          }
        }
        promo={
          Object {
            "headlines": Object {
              "promoHeadline": "Article Headline for Promo",
              "seoHeadline": "Article Headline for SEO",
            },
            "id": "urn:bbc:ares::article:c0000000001o",
            "locators": Object {
              "optimoUrn": "urn:bbc:optimo:asset:c0000000001o",
            },
            "summary": "Article summary.",
            "timestamp": 1514811600000,
          }
        }
        service="news"
      />
      <main
        role="main"
      >
        <ForwardRef>
          <ForwardRef>
            <Blocks
              blocks={
                Array [
                  Object {
                    "model": Object {
                      "blocks": Array [
                        Object {
                          "model": Object {
                            "blocks": Array [
                              Object {
                                "model": Object {
                                  "blocks": Array [
                                    Object {
                                      "model": Object {
                                        "attributes": Array [],
                                        "text": "Article Headline",
                                      },
                                      "type": "fragment",
                                    },
                                  ],
                                  "text": "Article Headline",
                                },
                                "type": "paragraph",
                              },
                            ],
                          },
                          "type": "text",
                        },
                      ],
                    },
                    "type": "headline",
                  },
                ]
              }
              componentsToRender={
                Object {
                  "headline": [Function],
                }
              }
            />
            <TimestampContainer
              timestamp={1514811600000}
            />
          </ForwardRef>
        </ForwardRef>
        <ForwardRef>
          <ForwardRef>
            <Blocks
              blocks={
                Array [
                  Object {
                    "model": Object {
                      "blocks": Array [
                        Object {
                          "model": Object {
                            "blocks": Array [
                              Object {
                                "model": Object {
                                  "attributes": Array [],
                                  "text": "A paragraph.",
                                },
                                "type": "fragment",
                              },
                            ],
                            "text": "A paragraph.",
                          },
                          "type": "paragraph",
                        },
                      ],
                    },
                    "type": "text",
                  },
                ]
              }
              componentsToRender={
                Object {
                  "image": [Function],
                  "subheadline": [Function],
                  "text": [Function],
                }
              }
            />
          </ForwardRef>
        </ForwardRef>
      </main>
      <FooterContainer />
    </PlatformContextProvider>
  </ServiceContextProvider>
</React.Fragment>
`;

exports[`ArticleContainer Jest Component should render null if no headline block 1`] = `null`;

exports[`ArticleContainer react-testing-library should render Persian article correctly 1`] = `
<div>
  <header
    role="banner"
  >
    <div
      class="StyledWrapper-m3awbo-0 gODSLQ"
    >
      <a
        class="StyledLink-m3awbo-1 gLMlhS"
        href="https://www.bbc.co.uk/news"
      >
        <span
          class="StyledSpan-m3awbo-2 keJLfN"
        >
          <svg
            aria-hidden="true"
            class="BrandSvg-m3awbo-3 lnFlrS"
            focusable="false"
            viewBox="0 0 167.95 24"
            xmlns="http://www.w3.org/2000/svg"
          >
            <g
              class="SvgGroup-m3awbo-4 cDpBLX"
              fill="#000"
              fill-rule="evenodd"
            >
              <path
                d="M84.32,0V24H58.82V0ZM79.26,16l-.41.25a11.91,11.91,0,0,1-6.07,1.85c-4.18,0-6.93-2.49-6.94-6.09s2.88-6.13,6.83-6.14a12,12,0,0,1,6,1.71l.4.22V4.6l-.17-.07A16.54,16.54,0,0,0,72.7,3.14a10.56,10.56,0,0,0-7.19,2.57,8.68,8.68,0,0,0-2.85,6.54A8.46,8.46,0,0,0,65,17.93a10,10,0,0,0,7.5,2.94h0a14,14,0,0,0,6.56-1.5l.15-.07Z M54.94,0V24H29.43V0ZM48.88,15.91a4.62,4.62,0,0,0-3.77-4.47,4.25,4.25,0,0,0,1.49-1.19,3.75,3.75,0,0,0,.72-2.34,4.17,4.17,0,0,0-1.39-3.13,6.33,6.33,0,0,0-4.36-1.41H36.12V20.65H42.5a7.18,7.18,0,0,0,4.9-1.53A4.27,4.27,0,0,0,48.88,15.91Z M45.7,15.57A2,2,0,0,1,45,17.16a4.22,4.22,0,0,1-2.85.79H39.22V13.23H42a4.89,4.89,0,0,1,2.82.68A1.93,1.93,0,0,1,45.7,15.57Z M43.32,9.92a2,2,0,0,0,.82-1.79,1.82,1.82,0,0,0-.58-1.43,3.33,3.33,0,0,0-2.26-.63H39.22v4.47h1.43A4.62,4.62,0,0,0,43.32,9.92Z M25.55,0V24H0V0ZM19.49,15.91a4.62,4.62,0,0,0-3.77-4.47,4.24,4.24,0,0,0,1.49-1.19,3.75,3.75,0,0,0,.72-2.34,4.18,4.18,0,0,0-1.39-3.13,6.33,6.33,0,0,0-4.36-1.41H6.74V20.65h6.38A7.18,7.18,0,0,0,18,19.12,4.27,4.27,0,0,0,19.49,15.91Z M13.93,9.92a2,2,0,0,0,.82-1.79,1.82,1.82,0,0,0-.58-1.43,3.33,3.33,0,0,0-2.26-.63H9.83v4.47h1.43A4.62,4.62,0,0,0,13.93,9.92Z M15.47,13.91a4.89,4.89,0,0,0-2.82-.68H9.83V18h2.94a4.23,4.23,0,0,0,2.85-.79,2,2,0,0,0,.69-1.59A1.93,1.93,0,0,0,15.47,13.91Z"
              />
              <path
                d="M111,3.36h2.36V20.7h-2.13L99.66,7.35V20.7H97.33V3.36h2L111,16.83Z"
              />
              <path
                d="m117.86 3.36h9.83v2.21h-7.35v5.29h7.1v2.22h-7.1v5.39h7.58v2.21h-10.06z M154.18,3.36h2.48l-7,17.41h-.55l-5.67-14.1-5.73,14.1h-.53l-7-17.41h2.5l4.78,12,4.81-12h2.35l4.83,12Z M163.38,13.43l-1.89-1.15A8.57,8.57,0,0,1,159,10.16a4,4,0,0,1-.75-2.41,4.26,4.26,0,0,1,1.42-3.33,5.31,5.31,0,0,1,3.69-1.28,7,7,0,0,1,4,1.22V7.17a5.74,5.74,0,0,0-4-1.8,3.34,3.34,0,0,0-2,.56,1.71,1.71,0,0,0-.78,1.44,2.22,2.22,0,0,0,.58,1.46,7.25,7.25,0,0,0,1.85,1.43l1.9,1.12Q168,13.28,168,16.21a4.42,4.42,0,0,1-1.4,3.39A5.11,5.11,0,0,1,163,20.9a7.63,7.63,0,0,1-4.68-1.58V16.17a5.84,5.84,0,0,0,4.65,2.55,2.93,2.93,0,0,0,1.94-.65,2,2,0,0,0,.78-1.63Q165.67,14.85,163.38,13.43Z"
              />
            </g>
          </svg>
          <span
            class="VisuallyHiddenText-sc-1yjwwa5-0 LgsrE"
          >
            BBC News
          </span>
        </span>
      </a>
    </div>
  </header>
  <main
    role="main"
  >
    <div
      class="Wrapper-sc-143rw0f-0 aJDbs"
    >
      <div
        class="GridItemConstrained-sc-143rw0f-2 dNlZTz"
      >
        <h1
          class="Headline-sc-1kh1qhu-0 edbytY"
        >
          Article Headline
        </h1>
        <time
          class="StyledTimestamp-ki0kc6-0 SmyUW"
          datetime="2018-01-01"
        >
          1 January 2018
        </time>
      </div>
    </div>
    <div
      class="Wrapper-sc-143rw0f-0 OatWrapper-sc-143rw0f-1 eJdZTS"
    >
      <div
        class="GridItemConstrained-sc-143rw0f-2 dNlZTz"
      >
        <p
          class="Paragraph-k859h4-0 iTJVxR"
        >
          A paragraph.
        </p>
      </div>
    </div>
  </main>
  <footer
    role="contentinfo"
  >
    <div
      class="StyledWrapper-m3awbo-0 gODSLQ"
    >
      <a
        class="StyledLink-m3awbo-1 gLMlhS"
        href="https://www.bbc.co.uk/news"
      >
        <span
          class="StyledSpan-m3awbo-2 keJLfN"
        >
          <svg
            aria-hidden="true"
            class="BrandSvg-m3awbo-3 lnFlrS"
            focusable="false"
            viewBox="0 0 167.95 24"
            xmlns="http://www.w3.org/2000/svg"
          >
            <g
              class="SvgGroup-m3awbo-4 cDpBLX"
              fill="#000"
              fill-rule="evenodd"
            >
              <path
                d="M84.32,0V24H58.82V0ZM79.26,16l-.41.25a11.91,11.91,0,0,1-6.07,1.85c-4.18,0-6.93-2.49-6.94-6.09s2.88-6.13,6.83-6.14a12,12,0,0,1,6,1.71l.4.22V4.6l-.17-.07A16.54,16.54,0,0,0,72.7,3.14a10.56,10.56,0,0,0-7.19,2.57,8.68,8.68,0,0,0-2.85,6.54A8.46,8.46,0,0,0,65,17.93a10,10,0,0,0,7.5,2.94h0a14,14,0,0,0,6.56-1.5l.15-.07Z M54.94,0V24H29.43V0ZM48.88,15.91a4.62,4.62,0,0,0-3.77-4.47,4.25,4.25,0,0,0,1.49-1.19,3.75,3.75,0,0,0,.72-2.34,4.17,4.17,0,0,0-1.39-3.13,6.33,6.33,0,0,0-4.36-1.41H36.12V20.65H42.5a7.18,7.18,0,0,0,4.9-1.53A4.27,4.27,0,0,0,48.88,15.91Z M45.7,15.57A2,2,0,0,1,45,17.16a4.22,4.22,0,0,1-2.85.79H39.22V13.23H42a4.89,4.89,0,0,1,2.82.68A1.93,1.93,0,0,1,45.7,15.57Z M43.32,9.92a2,2,0,0,0,.82-1.79,1.82,1.82,0,0,0-.58-1.43,3.33,3.33,0,0,0-2.26-.63H39.22v4.47h1.43A4.62,4.62,0,0,0,43.32,9.92Z M25.55,0V24H0V0ZM19.49,15.91a4.62,4.62,0,0,0-3.77-4.47,4.24,4.24,0,0,0,1.49-1.19,3.75,3.75,0,0,0,.72-2.34,4.18,4.18,0,0,0-1.39-3.13,6.33,6.33,0,0,0-4.36-1.41H6.74V20.65h6.38A7.18,7.18,0,0,0,18,19.12,4.27,4.27,0,0,0,19.49,15.91Z M13.93,9.92a2,2,0,0,0,.82-1.79,1.82,1.82,0,0,0-.58-1.43,3.33,3.33,0,0,0-2.26-.63H9.83v4.47h1.43A4.62,4.62,0,0,0,13.93,9.92Z M15.47,13.91a4.89,4.89,0,0,0-2.82-.68H9.83V18h2.94a4.23,4.23,0,0,0,2.85-.79,2,2,0,0,0,.69-1.59A1.93,1.93,0,0,0,15.47,13.91Z"
              />
              <path
                d="M111,3.36h2.36V20.7h-2.13L99.66,7.35V20.7H97.33V3.36h2L111,16.83Z"
              />
              <path
                d="m117.86 3.36h9.83v2.21h-7.35v5.29h7.1v2.22h-7.1v5.39h7.58v2.21h-10.06z M154.18,3.36h2.48l-7,17.41h-.55l-5.67-14.1-5.73,14.1h-.53l-7-17.41h2.5l4.78,12,4.81-12h2.35l4.83,12Z M163.38,13.43l-1.89-1.15A8.57,8.57,0,0,1,159,10.16a4,4,0,0,1-.75-2.41,4.26,4.26,0,0,1,1.42-3.33,5.31,5.31,0,0,1,3.69-1.28,7,7,0,0,1,4,1.22V7.17a5.74,5.74,0,0,0-4-1.8,3.34,3.34,0,0,0-2,.56,1.71,1.71,0,0,0-.78,1.44,2.22,2.22,0,0,0,.58,1.46,7.25,7.25,0,0,0,1.85,1.43l1.9,1.12Q168,13.28,168,16.21a4.42,4.42,0,0,1-1.4,3.39A5.11,5.11,0,0,1,163,20.9a7.63,7.63,0,0,1-4.68-1.58V16.17a5.84,5.84,0,0,0,4.65,2.55,2.93,2.93,0,0,0,1.94-.65,2,2,0,0,0,.78-1.63Q165.67,14.85,163.38,13.43Z"
              />
            </g>
          </svg>
          <span
            class="VisuallyHiddenText-sc-1yjwwa5-0 LgsrE"
          >
            BBC News
          </span>
        </span>
      </a>
    </div>
    <div
      class="SitewideLinksWrapper-sc-1gggobt-0 QEhqx"
    >
      <ul
        class="StyledList-sc-2e1ekc-0 dSNYOx"
        role="list"
      >
        <li
          class="StyledListItem-sc-2e1ekc-1 CfPrP"
          role="listitem"
        >
          <a
            class="StyledLink-nhmg8j-0 dHbSzF"
            href="https://www.bbc.com/news/help-41670342"
          >
            <span
              class="StyleLinkText-nhmg8j-1 fNLpPr"
            >
              Why you can trust the BBC
            </span>
          </a>
        </li>
        <li
          class="StyledListItem-sc-2e1ekc-1 CfPrP"
          role="listitem"
        >
          <a
            class="StyledLink-nhmg8j-0 dHbSzF"
            href="https://www.bbc.com/terms"
          >
            <span
              class="StyleLinkText-nhmg8j-1 fNLpPr"
            >
              Terms of Use
            </span>
          </a>
        </li>
        <li
          class="StyledListItem-sc-2e1ekc-1 CfPrP"
          role="listitem"
        >
          <a
            class="StyledLink-nhmg8j-0 dHbSzF"
            href="https://www.bbc.co.uk/aboutthebbc/"
          >
            <span
              class="StyleLinkText-nhmg8j-1 fNLpPr"
            >
              About the BBC
            </span>
          </a>
        </li>
        <li
          class="StyledListItem-sc-2e1ekc-1 CfPrP"
          role="listitem"
        >
          <a
            class="StyledLink-nhmg8j-0 dHbSzF"
            href="https://www.bbc.com/privacy/"
          >
            <span
              class="StyleLinkText-nhmg8j-1 fNLpPr"
            >
              Privacy Policy
            </span>
          </a>
        </li>
        <li
          class="StyledListItem-sc-2e1ekc-1 CfPrP"
          role="listitem"
        >
          <a
            class="StyledLink-nhmg8j-0 dHbSzF"
            href="https://www.bbc.com/usingthebbc/cookies/"
          >
            <span
              class="StyleLinkText-nhmg8j-1 fNLpPr"
            >
              Cookies
            </span>
          </a>
        </li>
        <li
          class="StyledListItem-sc-2e1ekc-1 CfPrP"
          role="listitem"
        >
          <a
            class="StyledLink-nhmg8j-0 dHbSzF"
            href="https://www.bbc.com/accessibility/"
          >
            <span
              class="StyleLinkText-nhmg8j-1 fNLpPr"
            >
              Accessibility Help
            </span>
          </a>
        </li>
        <li
          class="StyledListItem-sc-2e1ekc-1 CfPrP"
          role="listitem"
        >
          <a
            class="StyledLink-nhmg8j-0 dHbSzF"
            href="https://www.bbc.com/contact/"
          >
            <span
              class="StyleLinkText-nhmg8j-1 fNLpPr"
            >
              Contact the BBC
            </span>
          </a>
        </li>
      </ul>
      <p
        class="StyledParagraph-sc-1gggobt-1 kIUzFD"
      >
        © 2019 BBC. The BBC is not responsible for the content of external sites. 
        <a
          class="StyledLink-nhmg8j-0 jHQlUp"
          href="https://www.bbc.co.uk/help/web/links/"
        >
          <span
            class="StyleLinkText-nhmg8j-1 fNLpPr"
          >
            Read about our approach to external linking.
          </span>
        </a>
      </p>
    </div>
  </footer>
</div>
`;

exports[`ArticleContainer react-testing-library should render correctly 1`] = `
<div>
  <header
    role="banner"
  >
    <div
      class="StyledWrapper-m3awbo-0 gODSLQ"
    >
      <a
        class="StyledLink-m3awbo-1 gLMlhS"
        href="https://www.bbc.co.uk/news"
      >
        <span
          class="StyledSpan-m3awbo-2 keJLfN"
        >
          <svg
            aria-hidden="true"
            class="BrandSvg-m3awbo-3 lnFlrS"
            focusable="false"
            viewBox="0 0 167.95 24"
            xmlns="http://www.w3.org/2000/svg"
          >
            <g
              class="SvgGroup-m3awbo-4 cDpBLX"
              fill="#000"
              fill-rule="evenodd"
            >
              <path
                d="M84.32,0V24H58.82V0ZM79.26,16l-.41.25a11.91,11.91,0,0,1-6.07,1.85c-4.18,0-6.93-2.49-6.94-6.09s2.88-6.13,6.83-6.14a12,12,0,0,1,6,1.71l.4.22V4.6l-.17-.07A16.54,16.54,0,0,0,72.7,3.14a10.56,10.56,0,0,0-7.19,2.57,8.68,8.68,0,0,0-2.85,6.54A8.46,8.46,0,0,0,65,17.93a10,10,0,0,0,7.5,2.94h0a14,14,0,0,0,6.56-1.5l.15-.07Z M54.94,0V24H29.43V0ZM48.88,15.91a4.62,4.62,0,0,0-3.77-4.47,4.25,4.25,0,0,0,1.49-1.19,3.75,3.75,0,0,0,.72-2.34,4.17,4.17,0,0,0-1.39-3.13,6.33,6.33,0,0,0-4.36-1.41H36.12V20.65H42.5a7.18,7.18,0,0,0,4.9-1.53A4.27,4.27,0,0,0,48.88,15.91Z M45.7,15.57A2,2,0,0,1,45,17.16a4.22,4.22,0,0,1-2.85.79H39.22V13.23H42a4.89,4.89,0,0,1,2.82.68A1.93,1.93,0,0,1,45.7,15.57Z M43.32,9.92a2,2,0,0,0,.82-1.79,1.82,1.82,0,0,0-.58-1.43,3.33,3.33,0,0,0-2.26-.63H39.22v4.47h1.43A4.62,4.62,0,0,0,43.32,9.92Z M25.55,0V24H0V0ZM19.49,15.91a4.62,4.62,0,0,0-3.77-4.47,4.24,4.24,0,0,0,1.49-1.19,3.75,3.75,0,0,0,.72-2.34,4.18,4.18,0,0,0-1.39-3.13,6.33,6.33,0,0,0-4.36-1.41H6.74V20.65h6.38A7.18,7.18,0,0,0,18,19.12,4.27,4.27,0,0,0,19.49,15.91Z M13.93,9.92a2,2,0,0,0,.82-1.79,1.82,1.82,0,0,0-.58-1.43,3.33,3.33,0,0,0-2.26-.63H9.83v4.47h1.43A4.62,4.62,0,0,0,13.93,9.92Z M15.47,13.91a4.89,4.89,0,0,0-2.82-.68H9.83V18h2.94a4.23,4.23,0,0,0,2.85-.79,2,2,0,0,0,.69-1.59A1.93,1.93,0,0,0,15.47,13.91Z"
              />
              <path
                d="M111,3.36h2.36V20.7h-2.13L99.66,7.35V20.7H97.33V3.36h2L111,16.83Z"
              />
              <path
                d="m117.86 3.36h9.83v2.21h-7.35v5.29h7.1v2.22h-7.1v5.39h7.58v2.21h-10.06z M154.18,3.36h2.48l-7,17.41h-.55l-5.67-14.1-5.73,14.1h-.53l-7-17.41h2.5l4.78,12,4.81-12h2.35l4.83,12Z M163.38,13.43l-1.89-1.15A8.57,8.57,0,0,1,159,10.16a4,4,0,0,1-.75-2.41,4.26,4.26,0,0,1,1.42-3.33,5.31,5.31,0,0,1,3.69-1.28,7,7,0,0,1,4,1.22V7.17a5.74,5.74,0,0,0-4-1.8,3.34,3.34,0,0,0-2,.56,1.71,1.71,0,0,0-.78,1.44,2.22,2.22,0,0,0,.58,1.46,7.25,7.25,0,0,0,1.85,1.43l1.9,1.12Q168,13.28,168,16.21a4.42,4.42,0,0,1-1.4,3.39A5.11,5.11,0,0,1,163,20.9a7.63,7.63,0,0,1-4.68-1.58V16.17a5.84,5.84,0,0,0,4.65,2.55,2.93,2.93,0,0,0,1.94-.65,2,2,0,0,0,.78-1.63Q165.67,14.85,163.38,13.43Z"
              />
            </g>
          </svg>
          <span
            class="VisuallyHiddenText-sc-1yjwwa5-0 LgsrE"
          >
            BBC News
          </span>
        </span>
      </a>
    </div>
  </header>
  <main
    role="main"
  >
    <div
      class="Wrapper-sc-143rw0f-0 aJDbs"
    >
      <div
        class="GridItemConstrained-sc-143rw0f-2 dNlZTz"
      >
        <h1
          class="Headline-sc-1kh1qhu-0 edbytY"
        >
          Article Headline
        </h1>
        <time
          class="StyledTimestamp-ki0kc6-0 SmyUW"
          datetime="2018-01-01"
        >
          1 January 2018
        </time>
      </div>
    </div>
    <div
      class="Wrapper-sc-143rw0f-0 OatWrapper-sc-143rw0f-1 eJdZTS"
    >
      <div
        class="GridItemConstrained-sc-143rw0f-2 dNlZTz"
      >
        <p
          class="Paragraph-k859h4-0 iTJVxR"
        >
          A paragraph.
        </p>
      </div>
    </div>
  </main>
  <footer
    role="contentinfo"
  >
    <div
      class="StyledWrapper-m3awbo-0 gODSLQ"
    >
      <a
        class="StyledLink-m3awbo-1 gLMlhS"
        href="https://www.bbc.co.uk/news"
      >
        <span
          class="StyledSpan-m3awbo-2 keJLfN"
        >
          <svg
            aria-hidden="true"
            class="BrandSvg-m3awbo-3 lnFlrS"
            focusable="false"
            viewBox="0 0 167.95 24"
            xmlns="http://www.w3.org/2000/svg"
          >
            <g
              class="SvgGroup-m3awbo-4 cDpBLX"
              fill="#000"
              fill-rule="evenodd"
            >
              <path
                d="M84.32,0V24H58.82V0ZM79.26,16l-.41.25a11.91,11.91,0,0,1-6.07,1.85c-4.18,0-6.93-2.49-6.94-6.09s2.88-6.13,6.83-6.14a12,12,0,0,1,6,1.71l.4.22V4.6l-.17-.07A16.54,16.54,0,0,0,72.7,3.14a10.56,10.56,0,0,0-7.19,2.57,8.68,8.68,0,0,0-2.85,6.54A8.46,8.46,0,0,0,65,17.93a10,10,0,0,0,7.5,2.94h0a14,14,0,0,0,6.56-1.5l.15-.07Z M54.94,0V24H29.43V0ZM48.88,15.91a4.62,4.62,0,0,0-3.77-4.47,4.25,4.25,0,0,0,1.49-1.19,3.75,3.75,0,0,0,.72-2.34,4.17,4.17,0,0,0-1.39-3.13,6.33,6.33,0,0,0-4.36-1.41H36.12V20.65H42.5a7.18,7.18,0,0,0,4.9-1.53A4.27,4.27,0,0,0,48.88,15.91Z M45.7,15.57A2,2,0,0,1,45,17.16a4.22,4.22,0,0,1-2.85.79H39.22V13.23H42a4.89,4.89,0,0,1,2.82.68A1.93,1.93,0,0,1,45.7,15.57Z M43.32,9.92a2,2,0,0,0,.82-1.79,1.82,1.82,0,0,0-.58-1.43,3.33,3.33,0,0,0-2.26-.63H39.22v4.47h1.43A4.62,4.62,0,0,0,43.32,9.92Z M25.55,0V24H0V0ZM19.49,15.91a4.62,4.62,0,0,0-3.77-4.47,4.24,4.24,0,0,0,1.49-1.19,3.75,3.75,0,0,0,.72-2.34,4.18,4.18,0,0,0-1.39-3.13,6.33,6.33,0,0,0-4.36-1.41H6.74V20.65h6.38A7.18,7.18,0,0,0,18,19.12,4.27,4.27,0,0,0,19.49,15.91Z M13.93,9.92a2,2,0,0,0,.82-1.79,1.82,1.82,0,0,0-.58-1.43,3.33,3.33,0,0,0-2.26-.63H9.83v4.47h1.43A4.62,4.62,0,0,0,13.93,9.92Z M15.47,13.91a4.89,4.89,0,0,0-2.82-.68H9.83V18h2.94a4.23,4.23,0,0,0,2.85-.79,2,2,0,0,0,.69-1.59A1.93,1.93,0,0,0,15.47,13.91Z"
              />
              <path
                d="M111,3.36h2.36V20.7h-2.13L99.66,7.35V20.7H97.33V3.36h2L111,16.83Z"
              />
              <path
                d="m117.86 3.36h9.83v2.21h-7.35v5.29h7.1v2.22h-7.1v5.39h7.58v2.21h-10.06z M154.18,3.36h2.48l-7,17.41h-.55l-5.67-14.1-5.73,14.1h-.53l-7-17.41h2.5l4.78,12,4.81-12h2.35l4.83,12Z M163.38,13.43l-1.89-1.15A8.57,8.57,0,0,1,159,10.16a4,4,0,0,1-.75-2.41,4.26,4.26,0,0,1,1.42-3.33,5.31,5.31,0,0,1,3.69-1.28,7,7,0,0,1,4,1.22V7.17a5.74,5.74,0,0,0-4-1.8,3.34,3.34,0,0,0-2,.56,1.71,1.71,0,0,0-.78,1.44,2.22,2.22,0,0,0,.58,1.46,7.25,7.25,0,0,0,1.85,1.43l1.9,1.12Q168,13.28,168,16.21a4.42,4.42,0,0,1-1.4,3.39A5.11,5.11,0,0,1,163,20.9a7.63,7.63,0,0,1-4.68-1.58V16.17a5.84,5.84,0,0,0,4.65,2.55,2.93,2.93,0,0,0,1.94-.65,2,2,0,0,0,.78-1.63Q165.67,14.85,163.38,13.43Z"
              />
            </g>
          </svg>
          <span
            class="VisuallyHiddenText-sc-1yjwwa5-0 LgsrE"
          >
            BBC News
          </span>
        </span>
      </a>
    </div>
    <div
      class="SitewideLinksWrapper-sc-1gggobt-0 QEhqx"
    >
      <ul
        class="StyledList-sc-2e1ekc-0 dSNYOx"
        role="list"
      >
        <li
          class="StyledListItem-sc-2e1ekc-1 CfPrP"
          role="listitem"
        >
          <a
            class="StyledLink-nhmg8j-0 dHbSzF"
            href="https://www.bbc.com/news/help-41670342"
          >
            <span
              class="StyleLinkText-nhmg8j-1 fNLpPr"
            >
              Why you can trust the BBC
            </span>
          </a>
        </li>
        <li
          class="StyledListItem-sc-2e1ekc-1 CfPrP"
          role="listitem"
        >
          <a
            class="StyledLink-nhmg8j-0 dHbSzF"
            href="https://www.bbc.com/terms"
          >
            <span
              class="StyleLinkText-nhmg8j-1 fNLpPr"
            >
              Terms of Use
            </span>
          </a>
        </li>
        <li
          class="StyledListItem-sc-2e1ekc-1 CfPrP"
          role="listitem"
        >
          <a
            class="StyledLink-nhmg8j-0 dHbSzF"
            href="https://www.bbc.co.uk/aboutthebbc/"
          >
            <span
              class="StyleLinkText-nhmg8j-1 fNLpPr"
            >
              About the BBC
            </span>
          </a>
        </li>
        <li
          class="StyledListItem-sc-2e1ekc-1 CfPrP"
          role="listitem"
        >
          <a
            class="StyledLink-nhmg8j-0 dHbSzF"
            href="https://www.bbc.com/privacy/"
          >
            <span
              class="StyleLinkText-nhmg8j-1 fNLpPr"
            >
              Privacy Policy
            </span>
          </a>
        </li>
        <li
          class="StyledListItem-sc-2e1ekc-1 CfPrP"
          role="listitem"
        >
          <a
            class="StyledLink-nhmg8j-0 dHbSzF"
            href="https://www.bbc.com/usingthebbc/cookies/"
          >
            <span
              class="StyleLinkText-nhmg8j-1 fNLpPr"
            >
              Cookies
            </span>
          </a>
        </li>
        <li
          class="StyledListItem-sc-2e1ekc-1 CfPrP"
          role="listitem"
        >
          <a
            class="StyledLink-nhmg8j-0 dHbSzF"
            href="https://www.bbc.com/accessibility/"
          >
            <span
              class="StyleLinkText-nhmg8j-1 fNLpPr"
            >
              Accessibility Help
            </span>
          </a>
        </li>
        <li
          class="StyledListItem-sc-2e1ekc-1 CfPrP"
          role="listitem"
        >
          <a
            class="StyledLink-nhmg8j-0 dHbSzF"
            href="https://www.bbc.com/contact/"
          >
            <span
              class="StyleLinkText-nhmg8j-1 fNLpPr"
            >
              Contact the BBC
            </span>
          </a>
        </li>
      </ul>
      <p
        class="StyledParagraph-sc-1gggobt-1 kIUzFD"
      >
        © 2019 BBC. The BBC is not responsible for the content of external sites. 
        <a
          class="StyledLink-nhmg8j-0 jHQlUp"
          href="https://www.bbc.co.uk/help/web/links/"
        >
          <span
            class="StyleLinkText-nhmg8j-1 fNLpPr"
          >
            Read about our approach to external linking.
          </span>
        </a>
      </p>
    </div>
  </footer>
</div>
`;

exports[`ArticleContainer react-testing-library should render news correctly 1`] = `
.c6 {
  -webkit-clip-path: inset(100%);
  clip-path: inset(100%);
  -webkit-clip: rect(1px,1px,1px,1px);
  clip: rect(1px,1px,1px,1px);
  height: 1px;
  overflow: hidden;
  position: absolute;
  width: 1px;
}

.c0 {
  background-color: #B80000;
  height: 5rem;
  width: 100%;
}

.c2 {
  padding-top: 0.5rem;
  display: inline-block;
}

.c3 {
  display: block;
  padding-bottom: 1.5rem;
}

.c1:hover .c3,
.c1:focus .c3 {
  -webkit-text-decoration: none;
  text-decoration: none;
  border-bottom: 0.25rem solid #FFFFFF;
}

.c4 {
  display: block;
  height: 1.5rem;
  width: 10.496875rem;
  margin-top: 1.25rem;
}

.c5 {
  fill: #fff;
}

.c17 {
  padding: 0.5rem 0 0.5rem;
  color: #FFFFFF;
  font-weight: 700;
  -webkit-text-decoration: none;
  text-decoration: none;
  display: block;
}

.c20 {
  padding: 0.5rem 0 0.5rem;
  color: #FFFFFF;
  font-weight: 700;
  -webkit-text-decoration: none;
  text-decoration: none;
  display: inline;
}

.c16:hover .c18,
.c16:focus .c18 {
  padding-bottom: 2px;
  border-bottom: 2px solid #FFFFFF;
}

.c14 {
  border-bottom: 1px solid #FFFFFF;
  display: grid;
  grid-auto-flow: column;
  list-style-type: none;
  margin: 0;
  padding: 0 0 0.5rem;
}

.c14 > li:first-child {
  border-bottom: 1px solid #FFFFFF;
  padding: 0.5rem 0;
  margin-bottom: 0.5rem;
  grid-column: 1/-1;
}

.c15 {
  min-width: 50%;
}

.c13 {
  background-color: #4C4C4C;
  font-size: 0.875em;
  line-height: 1rem;
  font-family: ReithSansNewsRegular,Helvetica,Arial,sans-serif;
}

.c19 {
  color: #FFFFFF;
  margin: 0;
  padding: 1rem 0;
}

.c9 {
  color: #222222;
  font-family: ReithSerifNewsMedium,Helvetica,Arial,sans-serif;
  margin: 0;
  padding: 2rem 0 1rem 0;
  font-size: 1.75em;
  line-height: 2rem;
}

.c12 {
  color: #404040;
  font-family: ReithSansNewsRegular,Helvetica,Arial,sans-serif;
  padding-bottom: 1rem;
  margin: 0;
  font-size: 0.9375em;
  line-height: 1.25rem;
}

.c10 {
  font-size: 0.875em;
  line-height: 1rem;
  color: #5A5A5A;
  display: block;
  font-family: ReithSansNewsRegular,Helvetica,Arial,sans-serif;
  padding-bottom: 1rem;
}

.c7 {
  display: grid;
}

.c11 {
  display: grid;
  background: #F5F3F1;
}

@media (max-width:25em) {
  .c0 {
    padding: 0 0.5rem;
  }
}

@media (min-width:25em) {
  .c0 {
    padding: 0 1rem;
  }
}

@media (min-width:62.9375em) {
  .c0 {
    padding: 0 1rem;
  }
}

@media screen and (-ms-high-contrast:active),print {
  .c5 {
    fill: windowText;
  }
}

@media (max-width:37.4375em) {
  .c14 {
    grid-column-gap: 0.5rem;
    grid-template-columns: repeat(2,1fr);
    grid-template-rows: repeat(4,auto);
  }
}

@media (min-width:37.5em) and (max-width:62.9375em) {
  .c14 {
    grid-column-gap: 1rem;
    grid-template-columns: repeat(3,1fr);
    grid-template-rows: repeat(3,auto);
  }
}

@media (min-width:63em) and (max-width:80em) {
  .c14 {
    grid-column-gap: 1rem;
    grid-template-columns: repeat(4,1fr);
    grid-template-rows: repeat(3,auto);
  }
}

@media (min-width:80em) {
  .c14 {
    grid-column-gap: 1rem;
    grid-template-columns: repeat(5,1fr);
    grid-template-rows: repeat(3,auto);
  }
}

@supports not (display:grid) {
  .c14 > li:first-child {
    width: 100%;
  }
}

@supports not (display:grid) {
  .c15 {
    display: inline-block;
  }
}

@media (max-width:25em) {
  .c13 {
    padding: 0 0.5rem;
  }
}

@media (min-width:25em) {
  .c13 {
    padding: 0 1rem;
  }
}

@media (min-width:20em) and (max-width:37.4375em) {
  .c13 {
    line-height: 1.125rem;
  }
}

@media (min-width:37.5em) {
  .c13 {
    font-size: 0.8125em;
  }
}

@media (min-width:20em) and (max-width:37.4375em) {
  .c9 {
    font-size: 2em;
    line-height: 2.25rem;
  }
}

@media (min-width:37.5em) {
  .c9 {
    font-size: 2.75em;
    line-height: 3rem;
  }
}

@media (min-width:20em) {
  .c12 {
    font-size: 1em;
    line-height: 1.375rem;
  }
}

@media (min-width:20em) and (max-width:37.4375em) {
  .c10 {
    line-height: 1.125rem;
  }
}

@media (min-width:37.5em) {
  .c10 {
    font-size: 0.8125em;
  }
}

@media (max-width:37.4375em) {
  .c7 {
    grid-gap: 0.5rem;
  }
}

@media (min-width:37.5em) {
  .c7 {
    grid-gap: 1rem;
  }
}

@media (max-width:25em) {
  .c7 {
    padding: 0 0.5rem;
  }
}

@media (min-width:25em) and (max-width:62.9375em) {
  .c7 {
    padding: 0 1rem;
  }
}

@media (max-width:62.9375em) {
  .c7 {
    grid-template-columns: repeat(6,1fr);
  }
}

@media (min-width:63em) and (max-width:80em) {
  .c7 {
    grid-template-columns: 1fr repeat(8,minmax(0,6.75rem)) 1fr;
  }
}

@media (min-width:80em) {
  .c7 {
    grid-template-columns: 1fr repeat(10,minmax(0,6.9rem)) 1fr;
  }
}

@media (max-width:37.4375em) {
  .c11 {
    grid-gap: 0.5rem;
  }
}

@media (min-width:37.5em) {
  .c11 {
    grid-gap: 1rem;
  }
}

@media (max-width:25em) {
  .c11 {
    padding: 0 0.5rem;
  }
}

@media (min-width:25em) and (max-width:62.9375em) {
  .c11 {
    padding: 0 1rem;
  }
}

@media (max-width:62.9375em) {
  .c11 {
    grid-template-columns: repeat(6,1fr);
  }
}

@media (min-width:63em) and (max-width:80em) {
  .c11 {
    grid-template-columns: 1fr repeat(8,minmax(0,6.75rem)) 1fr;
  }
}

@media (min-width:80em) {
  .c11 {
    grid-template-columns: 1fr repeat(10,minmax(0,6.9rem)) 1fr;
  }
}

@media (max-width:37.5em) {
  .c8 {
    grid-column: 1 / -1;
  }
}

@media (min-width:37.5em) and (max-width:62.9375em) {
  .c8 {
    grid-column: 2 / -2;
  }
}

@media (min-width:63em) and (max-width:80em) {
  .c8 {
    grid-column: 3 / -3;
  }
}

@media (min-width:80em) {
  .c8 {
    grid-column: 4 / -4;
  }
}

<div>
  <header
    role="banner"
  >
    <div
      class="c0"
    >
      <a
        class="c1 c2"
        href="https://www.bbc.co.uk/news"
      >
        <span
          class="c3"
        >
          <svg
            aria-hidden="true"
            class="c4"
            focusable="false"
            viewBox="0 0 167.95 24"
            xmlns="http://www.w3.org/2000/svg"
          >
            <g
              class="c5"
              fill="#000"
              fill-rule="evenodd"
            >
              <path
                d="M84.32,0V24H58.82V0ZM79.26,16l-.41.25a11.91,11.91,0,0,1-6.07,1.85c-4.18,0-6.93-2.49-6.94-6.09s2.88-6.13,6.83-6.14a12,12,0,0,1,6,1.71l.4.22V4.6l-.17-.07A16.54,16.54,0,0,0,72.7,3.14a10.56,10.56,0,0,0-7.19,2.57,8.68,8.68,0,0,0-2.85,6.54A8.46,8.46,0,0,0,65,17.93a10,10,0,0,0,7.5,2.94h0a14,14,0,0,0,6.56-1.5l.15-.07Z M54.94,0V24H29.43V0ZM48.88,15.91a4.62,4.62,0,0,0-3.77-4.47,4.25,4.25,0,0,0,1.49-1.19,3.75,3.75,0,0,0,.72-2.34,4.17,4.17,0,0,0-1.39-3.13,6.33,6.33,0,0,0-4.36-1.41H36.12V20.65H42.5a7.18,7.18,0,0,0,4.9-1.53A4.27,4.27,0,0,0,48.88,15.91Z M45.7,15.57A2,2,0,0,1,45,17.16a4.22,4.22,0,0,1-2.85.79H39.22V13.23H42a4.89,4.89,0,0,1,2.82.68A1.93,1.93,0,0,1,45.7,15.57Z M43.32,9.92a2,2,0,0,0,.82-1.79,1.82,1.82,0,0,0-.58-1.43,3.33,3.33,0,0,0-2.26-.63H39.22v4.47h1.43A4.62,4.62,0,0,0,43.32,9.92Z M25.55,0V24H0V0ZM19.49,15.91a4.62,4.62,0,0,0-3.77-4.47,4.24,4.24,0,0,0,1.49-1.19,3.75,3.75,0,0,0,.72-2.34,4.18,4.18,0,0,0-1.39-3.13,6.33,6.33,0,0,0-4.36-1.41H6.74V20.65h6.38A7.18,7.18,0,0,0,18,19.12,4.27,4.27,0,0,0,19.49,15.91Z M13.93,9.92a2,2,0,0,0,.82-1.79,1.82,1.82,0,0,0-.58-1.43,3.33,3.33,0,0,0-2.26-.63H9.83v4.47h1.43A4.62,4.62,0,0,0,13.93,9.92Z M15.47,13.91a4.89,4.89,0,0,0-2.82-.68H9.83V18h2.94a4.23,4.23,0,0,0,2.85-.79,2,2,0,0,0,.69-1.59A1.93,1.93,0,0,0,15.47,13.91Z"
              />
              <path
                d="M111,3.36h2.36V20.7h-2.13L99.66,7.35V20.7H97.33V3.36h2L111,16.83Z"
              />
              <path
                d="m117.86 3.36h9.83v2.21h-7.35v5.29h7.1v2.22h-7.1v5.39h7.58v2.21h-10.06z M154.18,3.36h2.48l-7,17.41h-.55l-5.67-14.1-5.73,14.1h-.53l-7-17.41h2.5l4.78,12,4.81-12h2.35l4.83,12Z M163.38,13.43l-1.89-1.15A8.57,8.57,0,0,1,159,10.16a4,4,0,0,1-.75-2.41,4.26,4.26,0,0,1,1.42-3.33,5.31,5.31,0,0,1,3.69-1.28,7,7,0,0,1,4,1.22V7.17a5.74,5.74,0,0,0-4-1.8,3.34,3.34,0,0,0-2,.56,1.71,1.71,0,0,0-.78,1.44,2.22,2.22,0,0,0,.58,1.46,7.25,7.25,0,0,0,1.85,1.43l1.9,1.12Q168,13.28,168,16.21a4.42,4.42,0,0,1-1.4,3.39A5.11,5.11,0,0,1,163,20.9a7.63,7.63,0,0,1-4.68-1.58V16.17a5.84,5.84,0,0,0,4.65,2.55,2.93,2.93,0,0,0,1.94-.65,2,2,0,0,0,.78-1.63Q165.67,14.85,163.38,13.43Z"
              />
            </g>
          </svg>
          <span
            class="c6"
          >
            BBC News
          </span>
        </span>
      </a>
    </div>
  </header>
  <main
    role="main"
  >
    <div
      class="c7"
    >
      <div
        class="c8"
      >
        <h1
          class="c9"
        >
          Article Headline
        </h1>
        <time
          class="c10"
          datetime="2018-01-01"
        >
          1 January 2018
        </time>
      </div>
    </div>
    <div
      class="c11"
    >
      <div
        class="c8"
      >
        <p
          class="c12"
        >
          A paragraph.
        </p>
      </div>
    </div>
  </main>
  <footer
    role="contentinfo"
  >
    <div
      class="c0"
    >
      <a
        class="c1 c2"
        href="https://www.bbc.co.uk/news"
      >
        <span
          class="c3"
        >
          <svg
            aria-hidden="true"
            class="c4"
            focusable="false"
            viewBox="0 0 167.95 24"
            xmlns="http://www.w3.org/2000/svg"
          >
            <g
              class="c5"
              fill="#000"
              fill-rule="evenodd"
            >
              <path
                d="M84.32,0V24H58.82V0ZM79.26,16l-.41.25a11.91,11.91,0,0,1-6.07,1.85c-4.18,0-6.93-2.49-6.94-6.09s2.88-6.13,6.83-6.14a12,12,0,0,1,6,1.71l.4.22V4.6l-.17-.07A16.54,16.54,0,0,0,72.7,3.14a10.56,10.56,0,0,0-7.19,2.57,8.68,8.68,0,0,0-2.85,6.54A8.46,8.46,0,0,0,65,17.93a10,10,0,0,0,7.5,2.94h0a14,14,0,0,0,6.56-1.5l.15-.07Z M54.94,0V24H29.43V0ZM48.88,15.91a4.62,4.62,0,0,0-3.77-4.47,4.25,4.25,0,0,0,1.49-1.19,3.75,3.75,0,0,0,.72-2.34,4.17,4.17,0,0,0-1.39-3.13,6.33,6.33,0,0,0-4.36-1.41H36.12V20.65H42.5a7.18,7.18,0,0,0,4.9-1.53A4.27,4.27,0,0,0,48.88,15.91Z M45.7,15.57A2,2,0,0,1,45,17.16a4.22,4.22,0,0,1-2.85.79H39.22V13.23H42a4.89,4.89,0,0,1,2.82.68A1.93,1.93,0,0,1,45.7,15.57Z M43.32,9.92a2,2,0,0,0,.82-1.79,1.82,1.82,0,0,0-.58-1.43,3.33,3.33,0,0,0-2.26-.63H39.22v4.47h1.43A4.62,4.62,0,0,0,43.32,9.92Z M25.55,0V24H0V0ZM19.49,15.91a4.62,4.62,0,0,0-3.77-4.47,4.24,4.24,0,0,0,1.49-1.19,3.75,3.75,0,0,0,.72-2.34,4.18,4.18,0,0,0-1.39-3.13,6.33,6.33,0,0,0-4.36-1.41H6.74V20.65h6.38A7.18,7.18,0,0,0,18,19.12,4.27,4.27,0,0,0,19.49,15.91Z M13.93,9.92a2,2,0,0,0,.82-1.79,1.82,1.82,0,0,0-.58-1.43,3.33,3.33,0,0,0-2.26-.63H9.83v4.47h1.43A4.62,4.62,0,0,0,13.93,9.92Z M15.47,13.91a4.89,4.89,0,0,0-2.82-.68H9.83V18h2.94a4.23,4.23,0,0,0,2.85-.79,2,2,0,0,0,.69-1.59A1.93,1.93,0,0,0,15.47,13.91Z"
              />
              <path
                d="M111,3.36h2.36V20.7h-2.13L99.66,7.35V20.7H97.33V3.36h2L111,16.83Z"
              />
              <path
                d="m117.86 3.36h9.83v2.21h-7.35v5.29h7.1v2.22h-7.1v5.39h7.58v2.21h-10.06z M154.18,3.36h2.48l-7,17.41h-.55l-5.67-14.1-5.73,14.1h-.53l-7-17.41h2.5l4.78,12,4.81-12h2.35l4.83,12Z M163.38,13.43l-1.89-1.15A8.57,8.57,0,0,1,159,10.16a4,4,0,0,1-.75-2.41,4.26,4.26,0,0,1,1.42-3.33,5.31,5.31,0,0,1,3.69-1.28,7,7,0,0,1,4,1.22V7.17a5.74,5.74,0,0,0-4-1.8,3.34,3.34,0,0,0-2,.56,1.71,1.71,0,0,0-.78,1.44,2.22,2.22,0,0,0,.58,1.46,7.25,7.25,0,0,0,1.85,1.43l1.9,1.12Q168,13.28,168,16.21a4.42,4.42,0,0,1-1.4,3.39A5.11,5.11,0,0,1,163,20.9a7.63,7.63,0,0,1-4.68-1.58V16.17a5.84,5.84,0,0,0,4.65,2.55,2.93,2.93,0,0,0,1.94-.65,2,2,0,0,0,.78-1.63Q165.67,14.85,163.38,13.43Z"
              />
            </g>
          </svg>
          <span
            class="c6"
          >
            BBC News
          </span>
        </span>
      </a>
    </div>
    <div
      class="c13"
    >
      <ul
        class="c14"
        role="list"
      >
        <li
          class="c15"
          role="listitem"
        >
          <a
            class="c16 c17"
            href="https://www.bbc.com/news/help-41670342"
          >
            <span
              class="c18"
            >
              Why you can trust the BBC
            </span>
          </a>
        </li>
        <li
          class="c15"
          role="listitem"
        >
          <a
            class="c16 c17"
            href="https://www.bbc.com/terms"
          >
            <span
              class="c18"
            >
              Terms of Use
            </span>
          </a>
        </li>
        <li
          class="c15"
          role="listitem"
        >
          <a
            class="c16 c17"
            href="https://www.bbc.co.uk/aboutthebbc/"
          >
            <span
              class="c18"
            >
              About the BBC
            </span>
          </a>
        </li>
        <li
          class="c15"
          role="listitem"
        >
          <a
            class="c16 c17"
            href="https://www.bbc.com/privacy/"
          >
            <span
              class="c18"
            >
              Privacy Policy
            </span>
          </a>
        </li>
        <li
          class="c15"
          role="listitem"
        >
          <a
            class="c16 c17"
            href="https://www.bbc.com/usingthebbc/cookies/"
          >
            <span
              class="c18"
            >
              Cookies
            </span>
          </a>
        </li>
        <li
          class="c15"
          role="listitem"
        >
          <a
            class="c16 c17"
            href="https://www.bbc.com/accessibility/"
          >
            <span
              class="c18"
            >
              Accessibility Help
            </span>
          </a>
        </li>
        <li
          class="c15"
          role="listitem"
        >
          <a
            class="c16 c17"
            href="https://www.bbc.com/contact/"
          >
            <span
              class="c18"
            >
              Contact the BBC
            </span>
          </a>
        </li>
      </ul>
      <p
        class="c19"
      >
        © 2019 BBC. The BBC is not responsible for the content of external sites. 
        <a
          class="c16 c20"
          href="https://www.bbc.co.uk/help/web/links/"
        >
          <span
            class="c18"
          >
            Read about our approach to external linking.
          </span>
        </a>
      </p>
    </div>
  </footer>
</div>
`;

exports[`ArticleContainer react-testing-library should render null if no headline block 1`] = `null`;
